# 3D-surface-prediction

./: .gitignore  README.md  cluster_normals.py  environment.yml  make_features.py  predict_model.py  pyproject.toml  requirements.txt  time_diff.py  train_model.py  try_sam.py
dataset_loaders/: manually_annotated_dataset.py
neura_modules/: abstract_neura_module.py
neura_modules/coco_mask_iou_score/: coco_mask_iou_score.py  coco_tensor_dict.py
neura_modules/utils/: data_type.py
src/: constants.py  make_features.py  predict_model.py  train_model.py
src/clustering/: cluster_normals.py
src/dataset_loaders/: manually_annotated_dataset.py
src/utils/: NormalsClusterClassifier.py  dummy_cluster_data.py  surface_normals.py  time_diff.py
src/visualizers/: cluster_visual.py  pointcloud_point_picker.py
utils/: NormalsClusterClassifier.py  cluster_normals.py  dummy_cluster_data.py  surface_normals.py  visualizer.py
