[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3D-surface-predictions"
version = "0.0.0"
authors = [
    { name="Akshat Poddar", email="akshatpoddar312002@gmail.com"},
    { name="Phillip Tellier", email="phillip.tellier@nexera-robotics.com"}
]
description = "Machine learning models to predict 3D surface structures within pointclouds"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "torch_kmeans>=0.2.0",
    "matplotlib>=3.8.2",
    "numpy>=1.24.1",
    "open3d>=0.18.0",
    "opencv-python>=4.7.0.68",
    "pandas>=2.2.2",
    "pycocotools>=2.0.7",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch==0.3.3",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.3",
    "shapely>=2.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1"
]

[project.urls]
"Homepage" = "https://github.com/ptellier/3D-surface-prediction"
"Bug Tracker" = "https://github.com/ptellier/3D-surface-prediction/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]